# QMCToolsCL

./: .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  _problems.py  api.tex  blocking.py  device_info.py  digital_net_b2.py  digital_net_b2_test.py  fft_solvers.py  fwht_solvers.py  gs_parse.py  gs_run.py  index.html  lattice.py  lattice_test.py  makefile  mkdocs.yml  more_blocking.py  myenv.yml  nd_parse.py  nd_run.py  pdm_build.py  prep_docs_doctests.py  pyproject.toml  scratch.py  setup.py  tests.txt  tmp.py
.github/workflows/: docs.yml  doctests.yml  release.yml  tests.yml  wheels.yml
docs/: doctests.md  examples.md  index.md
qmcgencl/: __init__.py  lattice.cl
qmcpytoolscl/: __init__.py  qmcpytoolscl.cl
qmcseqcl/: __init__.py  digital_net_b2.cl  qmcseqcl.cl  qmcseqcl.h  qmcseqcl.py  util.py
qmctoolscl/: __init__.py  qmctoolscl.cl  rand_funcs.py  util.py
qmctoolscl/c_funcs/: dnb2_digital_shift.c  dnb2_gen_gray_float.c  dnb2_gen_natural_float.c  dnb2_gmat_lsb_to_msb.c  dnb2_gray.c  dnb2_integer_to_float.c  dnb2_interlace.c  dnb2_linear_matrix_scramble.c  dnb2_natural.c  dnb2_undo_interlace.c  fft_bro_1d_radix2.c  fwht_1d_radix2.c  gdn_digital_permutation.c  gdn_digital_shift.c  gdn_gen_natural.c  gdn_gen_natural_same_base.c  gdn_integer_to_float.c  gdn_interlace.c  gdn_linear_matrix_scramble.c  gdn_undo_interlace.c  halton_qrng.c  lat_gen_gray.c  (+6 more)
search/: search_index.json
speed_opencl_vs_c/: gs_parse.py  gs_run.py  main.py  n_experiment.py  nd_experiment.py  nd_parse.py  nd_run.py  problems.py
tests/: c_head.txt  cl_head.txt  tests.txt
(+25 files in other folders)
